Fixed background attachment on mobile.

--- a/css/style.scss
+++ b/css/style.scss
@@ -66,6 +66,7 @@ body {
 
     @include mobile {
       background-image: url("../res/background_mobile.jpg");
+      background-attachment: scroll;
     }
   }
 
